# jup-ag-sdk

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml  README.md
examples/src/: main.rs  swap.rs  token.rs  trigger.rs  ultra.rs
jup-ag-sdk/: Cargo.toml
jup-ag-sdk/src/: client.rs  lib.rs
jup-ag-sdk/src/client/: recurring_api.rs  swap_api.rs  token_api.rs  trigger_api.rs  ultra_api.rs
jup-ag-sdk/src/types/: mod.rs  quote_request.rs  quote_response.rs  recurring.rs  token.rs  trigger.rs  ultra.rs
src/: lib.rs  main.rs  types.rs
src/types/: quote_request.rs  quote_response.rs  swap_transaction.rs
tests/: Cargo.toml
tests/src/: common.rs  lib.rs  swap.rs  token.rs  trigger.rs  ultra.rs
