[package]
name = "jup-ag-sdk"
version = "0.1.1"
edition = "2024"
description = "A Rust SDK for Jupiter exchange APIs."
authors = ["thrishank <thrishankkalluru@gmail.com"]
license = "MIT"
readme = "README.md"
keywords = ["rust", "sdk", "jupiter", "exchange", "api"]
exclude = ["/target/*", "/examples/*", "/tests/*"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
